--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "antd": "^4.10.0",
+    "axios": "^0.21.1",
     "cra-template": "1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "antd": "^4.10.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.14"
+    "react-scripts": "4.0.1",
+    "redux": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
